--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
-
 <body>
     <main>
         <h1>三山崩し 最後の一つを取ったほうが勝ちです</h1>
@@ -51,7 +49,7 @@
                 <div class="stones">
                     <div class="stone"></div>
                     <div class="stone"></div>
-                    <div class="stone"></div>
+                    <div class "stone"></div>
                     <div class="stone"></div>
                     <div class="stone"></div>
                     <div class="stone"></div>
@@ -60,16 +58,26 @@
                     <div class="stone"></div>
                 </div>
             </div>
-
         </div>
         <h2>あなたの番です。取る山と個数を選択してください。</h2>
         <div id="btn">
             <div id="take">とる</div>
             <div id="cancel">とりけし</div>
         </div>
+
+        <!-- Add the audio element for BGM -->
+        <audio id="bgm" autoplay loop>
+            <source src="bgm.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </main>
 
     <script src="main.js"></script>
 </body>
-
 </html>
+
+
+
+
+
+
