--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
         </div>
 
         <!-- Add the audio element for BGM -->
-        <audio id="bgm" autoplay loop>
+        <audio id="bgm" controls>
             <source src="bgm.mp3" type="audio/mpeg">
+            <source src="bgm.ogg" type="audio/ogg">
             Your browser does not support the audio element.
         </audio>
+           
     </main>
 
     <script src="main.js"></script>
