--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
             <div id="cancel">とりけし</div>
         </div>
 
+        <div id="timer">Remaining Time: 3 minutes</div>
+       
         <!-- Add the audio element for BGM -->
         <audio id="bgm" controls>
             <source src="bgm.mp3" type="audio/mpeg">
